--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/pmsudhi/Sudhi.Bot#readme",
   "dependencies": {
     "botbuilder": "^3.4.4",
+    "https": "^1.0.0",
     "restify": "^4.3.0"
   }
 }
